--- a/perfume/src/App.css
+++ b/perfume/src/App.css
@@ -1,7 +1,30 @@
 .App {
   text-align: center;
 }
-
+.productImg{
+  border:1px solid  black;
+  border-radius: 10px;
+  padding:10px;
+  
+}
+.cont{
+  display: flex;
+}
+.content{
+  padding:10px;
+  border:2px solid black;
+  border-radius: 10px;
+  margin-left:50px;
+  display: inline-block;
+  
+}
+.desc{
+  padding:10px;
+  border:2px solid black;
+  border-radius: 10px;
+  margin-left:50px;
+  
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
